# htcpcp-impl

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  Parsing.cpp  README.md  k8s.yml  main.cpp
.github/workflows/: ctest.yml
docs/: 0_8-Home_8md.html  1_8-Introduction_8md.html  2_8-Goal_8md.html  3_8-Derived-Pots_8md.html  3_8-Tech-Stack-_0c-Tooling_8md.html  4_8-Cup-_0c--Additions_8md.html  4_81-Pot_8md.html  4_82-Derived-Pots_8md.html  4_83-Cup-_0c--Additions_8md.html  4_84-Request_0cResponse_8md.html  4_85-Networking_8md.html  4_86-Docker-K8s_8md.html  5_8-Processing_8md.html  5_8-Response_8md.html  6_8-Results_8md.html  7_8-Future-Scope-of-the-project_8md.html  AlcoholType_8h.html  AlcoholType_8h_source.html  CoffeePot_8cpp.html  CoffeePot_8cpp_8o_8d.html  CoffeePot_8h_source.html  Cup_8cpp.html  Cup_8cpp_8o_8d.html  Cup_8h.html  Cup_8h_source.html  DecafPot_8cpp.html  DecafPot_8h_source.html  HTTPRequestType_8h_source.html  MilkType_8h.html  MilkType_8h_source.html  PotBrewTest_8cpp.html  PotCupTest_8cpp.html  Pot_8cpp_8o_8d.html  Pot_8h.html  Pot_8h_source.html  Request_8cpp.html  Request_8cpp_8o_8d.html  Request_8h.html  Request_8h_source.html  Requirement_1-A-Web-Server_8md.html  (+69 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  (+62 more)
html/: 2_8-Pot_8md.html  AlcoholType_8h_source.html  CMakeFiles_23_820_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  CMakeFiles_23_820_83_2CompilerIdC_2CMakeCCompilerId_8c.html  CMakeFiles_2htcpcp_8dir_2main_8cpp_8o_8d.html  CMakeFiles_2htcpcp_8dir_2pots_2Pot_8cpp_8o_8d.html  CoffeePot_8h.html  CupDescriptionTest_8cpp.html  DecafPot_8cpp_8o_8d.html  DecafPot_8h.html  Future-Scope_8md.html  HTTPRequestType_8h.html  HTTPRequestType_8h_source.html  MilkType_8h_source.html  PotBrewTest_8cpp_8o_8d.html  PotCupTest_8cpp_8o_8d.html  Pot_8cpp.html  Pot_8h.html  Pot_8h_source.html  README_8md.html  Requirement_1-Deploying-Multiple-Instances-of-the-Server_8md.html  ServerSocket_8cpp.html  ServerSocket_8h.html  ServerSocket_8h_source.html  Socket_8cpp.html  Socket_8cpp_8o_8d.html  Socket_8h.html  SpiceType_8h.html  SpiceType_8h_source.html  SweetenerType_8h_source.html  SyrupType_8h.html  SyrupType_8h_source.html  TeaPot_8h_source.html  classCoffeePot.html  classCup-members.html  classCup.html  classDecafPot.html  classRequest-members.html  classServerSocket-members.html  classSocket.html  (+55 more)
html/search/: all_1.js  all_12.js  all_13.js  all_14.js  all_17.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_9.js  all_b.js  all_e.js  all_f.js  classes_2.js  classes_3.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_3.js  enumvalues_5.js  enumvalues_7.js  enumvalues_9.js  enumvalues_a.js  files_1.js  files_4.js  files_5.js  files_6.js  files_7.js  files_9.js  files_a.js  (+21 more)
latex/: md_README.tex  refman.tex
networking/: CMakeLists.txt  HTTPRequestType.h  Request.cpp  Request.h  Response.cpp  Response.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h
pots/: CMakeLists.txt  CoffeePot.cpp  CoffeePot.h  Cup.cpp  Cup.h  DecafPot.cpp  DecafPot.h  Pot.cpp  Pot.h  TeaPot.cpp  TeaPot.h
pots/additions/: AlcoholType.h  CMakeLists.txt  MilkType.h  SpiceType.h  SweetenerType.h  SyrupType.h
tests/: CMakeLists.txt
tests/pots/: CMakeLists.txt  CupAdd.cpp  CupDescriptionTest.cpp  PotBrewTest.cpp  PotCupTest.cpp
